--- a/picon.cabal
+++ b/picon.cabal
@@ -19,7 +19,9 @@ executable picon
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.9 && <4.10
+  build-depends:
+    base >=4.9 && <4.10,
+    language-python == 0.5.4
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wcompat -Wall -O
