--- a/picon.cabal
+++ b/picon.cabal
@@ -24,4 +24,4 @@ executable picon
     language-python == 0.5.4
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wcompat -Wall -O
+  ghc-options:         -Wcompat -Wall -O -fno-warn-orphans
