--- a/picon.cabal
+++ b/picon.cabal
@@ -21,7 +21,8 @@ executable picon
   -- other-extensions:
   build-depends:
     base >=4.9 && <4.10,
-    language-python == 0.5.4
+    containers >= 0.5.7.1,
+    language-python >= 0.5.4
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wcompat -Wall -O -fno-warn-orphans
