--- a/picon.cabal
+++ b/picon.cabal
@@ -22,6 +22,7 @@ executable picon
   build-depends:
     base >=4.9 && <4.10,
     containers >= 0.5.7.1,
+    mtl >= 2.2.1,
     language-python >= 0.5.4
   hs-source-dirs:      src
   default-language:    Haskell2010
