--- a/picon.cabal
+++ b/picon.cabal
@@ -23,7 +23,7 @@ executable picon
     base >=4.9 && <4.10,
     containers >= 0.5.7.1,
     mtl >= 2.2.1,
-    language-python >= 0.5.4
+    language-python == 0.5.6
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wcompat -Wall -O -fno-warn-orphans
