--- a/picon.cabal
+++ b/picon.cabal
@@ -24,7 +24,7 @@ executable picon
     containers >= 0.5.7.1,
     mtl >= 2.2.1,
     transformers >= 0.5.2,
-    language-python == 0.5.6
+    language-python >= 0.5.4
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wcompat -Wall -O -fno-warn-orphans
