--- a/picon.cabal
+++ b/picon.cabal
@@ -24,7 +24,10 @@ executable picon
     containers >= 0.5.7.1,
     mtl >= 2.2.1,
     transformers >= 0.5.2,
-    language-python >= 0.5.4
+    filepath >= 1.4.1,
+    directory >= 1.3.0,
+    language-python >= 0.5.4,
+    optparse-applicative >= 0.14.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wcompat -Wall -O -fno-warn-orphans
