--- a/picon.cabal
+++ b/picon.cabal
@@ -37,4 +37,4 @@ executable picon
     optparse-applicative >= 0.14.0
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wcompat -Wall -O -fno-warn-orphans
+  ghc-options:         -Wcompat -Wall -fno-warn-orphans
